@@ -1,6 +1,6 @@
 package org.jabref.gui.frame;
 
-import java.util.Collections;
+import java.util.EnumMap;
 import java.util.EnumSet;
 import java.util.Map;
 import java.util.Set;
@@ -21,15 +21,17 @@ public class SidePanePreferences {
     public SidePanePreferences(Set<SidePaneType> visiblePanes,
                                Map<SidePaneType, Integer> preferredPositions,
                                int webSearchFetcherSelected) {
-        this.visiblePanes = FXCollections.observableSet(visiblePanes);
-        this.preferredPositions = FXCollections.observableMap(preferredPositions);
+        this.visiblePanes = FXCollections.observableSet(EnumSet.noneOf(SidePaneType.class));
+        this.visiblePanes.addAll(visiblePanes);
+        this.preferredPositions = FXCollections.observableMap(new EnumMap<>(SidePaneType.class));
+        this.preferredPositions.putAll(preferredPositions);
         this.webSearchFetcherSelected = new SimpleIntegerProperty(webSearchFetcherSelected);
     }
 
     private SidePanePreferences() {
         this(
                 EnumSet.of(SidePaneType.WEB_SEARCH, SidePaneType.GROUPS), // Default visible panes (OPEN_OFFICE omitted)
-                Collections.emptyMap(),                                   // Default preferred positions
+                Map.of(),                                                 // Default preferred positions
                 0                                                         // Default web search fetcher index
         );
     }
