@@ -95,8 +95,7 @@ public interface Trigger {
             /// conditions are met.
             ///
             /// @param node       The node to attach the trigger to.
-            /// @param onNavigate A function that wraps the original event handler. It takes a Supplier representing the
-            ///                                     original action and returns the result of that action.
+            /// @param onNavigate A function that wraps the original event handler. It takes a Supplier representing the original action and returns the result of that action.
             /// @return A cleanup runnable that detaches the trigger.
             Runnable create(Node node, Function<Supplier<?>, ?> onNavigate);
         }
@@ -175,7 +174,7 @@ public interface Trigger {
                     throw new IllegalArgumentException("onTextInput can only be used with TextInputControl");
                 }
                 ChangeListener<String> listener = (_, _, newText) -> {
-                    if (!newText.trim().isEmpty()) {
+                    if (!newText.isBlank()) {
                         // A text input change doesn't have an "original action" to wrap, so we pass NOTHING.
                         onNavigate.apply(NOTHING);
                     }
