@@ -13,9 +13,7 @@ import org.jabref.model.entry.LinkedFile;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.StandardField;
 
-/**
- * Collects file links from the ps and pdf fields, and add them to the list contained in the file field.
- */
+/// Collects file links from the ps and pdf fields, and add them to the list contained in the file field.
 public class UpgradePdfPsToFileCleanup implements CleanupJob {
 
     // Field name and file type name (from ExternalFileTypes)
@@ -37,7 +35,7 @@ public class UpgradePdfPsToFileCleanup implements CleanupJob {
         int oldItemCount = fileList.size();
         for (Map.Entry<Field, String> field : fields.entrySet()) {
             entry.getField(field.getKey()).ifPresent(fieldContent -> {
-                if (fieldContent.trim().isEmpty()) {
+                if (fieldContent.isBlank()) {
                     return;
                 }
                 Path path = Path.of(fieldContent);
